# urbanformer

./: .gitignore  LICENSE  README.md  config.py  data.py  eval.py  losses.py  metrics.py  morphology.py  pyproject.toml  train.py
models/: axial.py  field.py  unet.py
notebooks/: 00_build_dataset.ipynb  00_build_dataset.ipynb:Zone.Identifier  01_unet_baseline.ipynb  02_pooled_transformer.ipynb  03_urbanformer_field.ipynb  04_morphology_ablation.ipynb  05_cross_model_ood.ipynb
reports/: PORTING_NOTES.md  RESULTS.md
scripts/: fetch_data.py  make_arch_figure.py  make_figures.py
tests/: test_axial.py  test_data.py  test_field.py  test_losses.py  test_metrics.py  test_morphology.py  test_pooled.py  test_provenance.py  test_unet.py
urbanformer/: losses.py  metrics.py  provenance.py
urbanformer/models/: axial.py  pooled.py
